# temple-price-bot

./: .env.template  .gitignore  README.md  pyproject.toml  requirements.txt  temple_sidebar-bot.py
app/: bot.py  main.py  spice.py  temple_price.py  utils.py
